fix word wrapping

--- a/src/components/SearchResult/BriefDoc.module.css
+++ b/src/components/SearchResult/BriefDoc.module.css
@@ -53,6 +53,7 @@
     line-clamp: 5;
     -webkit-box-orient: vertical;
     line-height: 1.2;
+    overflow-wrap: anywhere;
 }
 .truncatedText:hover {
     cursor: pointer;
